Fixed spinner overlay z-index

--- a/css/admin.css
+++ b/css/admin.css
@@ -33,6 +33,7 @@
 {
 	background: rgba(0,0,0,.3);
 	position: fixed;
+	z-index: 999999;
 	left: 0;
 	right: 0;
 	top: 0;
